APX-132: Homepage slider implementation
Completed the slider theming

--- a/source/themes/custom/campbell/styles/base/_font-family.scss
+++ b/source/themes/custom/campbell/styles/base/_font-family.scss
@@ -1,29 +1,17 @@
 @font-face {
-  font-family: 'Arial';
-  src: url('../fonts/arial/Arial-BoldMT.woff2') format('woff2');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: 'Arial';
-  src: url('../fonts/arial/ArialMT.woff2') format('woff2');
-  font-weight: light;
-}
-
-@font-face {
   font-family: 'Helvetica';
-  src: url('../fonts/helvetica/Helvetica-Light.woff2') format('woff2');
-  font-weight: light;
-}
-
-@font-face {
-  font-family: 'Helvetica';
-  src: url('../fonts/helvetica/Helvetica.woff2') format('woff2');
+  src: url('../fonts/Helvetica_Neue_LT_Pro/HelveticaNeueLTPro-MdCn.otf') format('otf');
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Helvetica';
-  src: url('../fonts/helvetica/Helvetica-Bold.woff2') format('woff2');
+  src: url('../fonts/Helvetica_Neue_LT_Pro/HelveticaNeueLTPro-BdCn.otf') format('otf');
   font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../fonts/Helvetica_Neue_LT_Pro/HelveticaNeueLTPro-HvCn.otf') format('otf');
+  font-weight: bolder;
 }
