--- a/source/themes/custom/campbell/styles/base/_form.scss
+++ b/source/themes/custom/campbell/styles/base/_form.scss
@@ -20,6 +20,10 @@
       padding: 1px;
       font-size: 10px;
       color: $black;
+
+      &::placeholder {
+        padding: 0 10px;
+      }
     }
   }
 
