--- a/source/themes/custom/campbell/styles/base/_typography.scss
+++ b/source/themes/custom/campbell/styles/base/_typography.scss
@@ -1,8 +1,10 @@
 body {
   font-size: 12px;
   font-weight: $normal;
-  font-family: $arial;
+  font-family: $helvetica;
   background: $gray;
+  -webkit-font-smoothing: antialiased;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0);
 }
 
 [dir='rtl'] {
@@ -28,6 +30,8 @@ body {
 
 a {
   text-decoration: none;
+  -webkit-font-smoothing: antialiased;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0);
 }
 
 ul {
