--- a/source/themes/custom/campbell/styles/components/_footer.scss
+++ b/source/themes/custom/campbell/styles/components/_footer.scss
@@ -12,7 +12,7 @@
   .footer-columns {
     background: url('#{$image-base-path}/footer_back.png') repeat-x left top $nero;
     padding: 50px 0 10px;
-    font-family: $arial;
+    font-family: $helvetica;
     color: $white;
     @media only screen and (max-width: $tablet-max) {
       padding: 25px 25px 10px;
@@ -138,7 +138,7 @@
   }
 
   .nacm-pad {
-    margin-top: 35px;
+    margin-top: 25px;
     @media only screen and (max-width: $tablet) {
       margin-top: 15px;
     }
@@ -148,6 +148,11 @@
     h2 {
       font-size: 13px;
       font-weight: bold;
+    }
+
+    img,
+    a {
+      transition: 0.5s ease-in-out;
     }
   }
 }
