--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -11,6 +11,7 @@ $white: #FFFFFF;
 $pantone: #19975D;
 $menu-hover: #384E53;
 $hamburger-menu: #2B2B30;
+$slider-txt-seperate: #34CB97;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
@@ -18,8 +19,9 @@ $helvetica: Helvetica, sans-serif;
 
 /****** font weight ******/
 $light: light;
-$bold: bold;
 $normal: normal;
+$bold: bold;
+$bolder: bolder;
 
 /****** base path ******/
 $image-base-path: '../../campbell/images';
