--- a/docroot/themes/custom/cleco/src/scss/components/_strap.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_strap.scss
@@ -5,7 +5,7 @@
 .strap-content {
   display: flex;
 
-  @media (max-width: $breakpoint-notches - 1) {
+  @media (max-width: $media-screen-medium) {
     flex-wrap: wrap;
   }
 }
@@ -22,6 +22,22 @@
   &:last-child {
     @include section-padding(right);
   }
+
+  .form-bar {
+    .form-bar-item {
+      @media only screen and (max-width: $media-screen-medium ) {
+        max-width: 100%;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $media-screen-large ) {
+    flex: 0 0 50%;
+  }
+
+  @media only screen and (max-width: $media-screen-medium ) {
+    flex: 0 0 100%;
+  }
 }
 
 .strap-block-content {
@@ -34,15 +50,25 @@
   color: #fff;
   max-width: 40rem;
 
+  @media only screen and (max-width: $media-screen-medium ) {
+    max-width: 100%;
+    flex: 0 0 100%;
+  }
+
   a {
     color: inherit;
     box-shadow: 0 1px 0 0 currentColor;
   }
 }
 
-@media (min-width: $breakpoint-notches) {
-  .strap-block--notched {
+
+.strap-block--notched {
+  @media (min-width: $breakpoint-notches) {
     @include property-scale(margin-top, map-multiplier($container-padding-map, -2));
+  }
+
+  @media only screen and(max-width: $media-screen-medium) {
+    margin-top: 0;
   }
 }
 
