APX-131:Homepage implementaion - done
APX-131:Homepage implementaion - done

Resolved conflict

--- a/source/themes/custom/campbell/styles/base/_font-family.scss
+++ b/source/themes/custom/campbell/styles/base/_font-family.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'Helvetica';
+  font-family: 'Helvetica Neue';
   src: url('../fonts/Helvetica_Neue_LT_Pro/HelveticaNeueLTPro-MdCn.otf') format('otf');
-  font-weight: normal;
+  font-weight: 600;
 }
 
 @font-face {
-  font-family: 'Helvetica';
+  font-family: 'Helvetica Neue Condensed Bold';
   src: url('../fonts/Helvetica_Neue_LT_Pro/HelveticaNeueLTPro-BdCn.otf') format('otf');
-  font-weight: bold;
+  font-weight: 700;
 }
 
 @font-face {
-  font-family: 'Helvetica';
+  font-family: 'Helvetica Neue Condensed Black';
   src: url('../fonts/Helvetica_Neue_LT_Pro/HelveticaNeueLTPro-HvCn.otf') format('otf');
-  font-weight: bolder;
+  font-weight: 800;
 }
