--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -9,13 +9,17 @@ $nero: #161616;
 $lighter-gray: #666666;
 $white: #FFFFFF;
 $pantone: #19975D;
+$pantone-dark: #1A975D;
 $menu-hover: #384E53;
 $hamburger-menu: #2B2B30;
 $slider-txt-seperate: #34CB97;
+$light-black: #333333;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
-$helvetica: Helvetica, sans-serif;
+$helvetica: 'Helvetica Neue', Helvetica, sans-serif;
+$helvetica-bold: 'HelveticaNeue-CondensedBold', 'Helvetica Neue', Helvetica, sans-serif;
+$helvetica-black: 'HelveticaNeue-CondensedBlack', 'Helvetica Neue', Helvetica, sans-serif;
 
 /****** font weight ******/
 $light: light;
