--- a/docroot/themes/custom/campbell/templates/views/views-view-unformatted--homepage-feature-content.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view-unformatted--homepage-feature-content.html.twig
@@ -15,29 +15,18 @@
  * @see template_preprocess_views_view_unformatted()
  */
 #}
-
 {% if title %}
   <h3>{{ title }}</h3>
 {% endif %}
-<div class="home-text">
-    {% for row in rows %}
-      {% if loop.first %}
-        {%
-          set row_classes = [
-            default_row_class ? 'views-row',
-            'link-item',
-          ]
-        %}
-      {% else %}
-        {%
-          set row_classes = [
-            default_row_class ? 'views-row',
-            'link-item',
-          ]
-        %}
-      {% endif %}
-        <div{{ row.attributes.addClass(row_classes) }}>
-          {{- row.content -}}
-        </div>
-    {% endfor %}
+<div class="feature-block">
+  {% for row in rows %}
+    {%
+      set row_classes = [
+        default_row_class ? 'views-row',
+      ]
+    %}
+    <div{{ row.attributes.addClass(row_classes) }}>
+      {{- row.content -}}
+    </div>
+  {% endfor %}
 </div>
