--- a/source/themes/custom/campbell/styles/base/_layout.scss
+++ b/source/themes/custom/campbell/styles/base/_layout.scss
@@ -7,4 +7,51 @@
 .wrapper-content {
   max-width: 1000px;
   margin: 0 auto;
+  word-wrap: break-word;
+}
+
+.px-0 {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.col {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.col-sidebar {
+  background: $white url('#{$image-base-path}/sidebar_sep.png') right top repeat-y;
+  @media only screen and (min-width: $tablet) {
+    flex: 0 0 23%;
+    max-width: 23%;
+  }
+  @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
+    flex: 0 0 28%;
+    max-width: 28%;
+  }
+  @media only screen and (max-width: $tablet) {
+    padding-top: 20px;
+  }
+}
+
+.col-main {
+  @media only screen and (min-width: $tablet) {
+    flex: 0 0 54%;
+    max-width: 54%;
+  }
+  @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
+    flex: 0 0 44%;
+    max-width: 44%;
+  }
 }
