--- a/source/themes/custom/campbell/styles/base/_typography.scss
+++ b/source/themes/custom/campbell/styles/base/_typography.scss
@@ -2,7 +2,7 @@ body {
   font-size: 12px;
   font-weight: $normal;
   font-family: $helvetica;
-  background: $gray;
+  background: $white;
   -webkit-font-smoothing: antialiased;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0);
 }
