--- a/source/themes/custom/campbell/styles/components/_footer.scss
+++ b/source/themes/custom/campbell/styles/components/_footer.scss
@@ -149,10 +149,17 @@
       font-size: 13px;
       font-weight: bold;
     }
+  }
+}
 
-    img,
-    a {
-      transition: 0.5s ease-in-out;
-    }
+.youtube-icon {
+  background: url('#{$image-base-path}/youtube_normal_icon.png') left top no-repeat;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  transition: background-image 0.4s ease-in-out;
+
+  &:hover {
+    background: url('#{$image-base-path}/youtube_hover_icon_new.png');
   }
 }
