--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -139,7 +139,7 @@
     .mobile-search-block {
       position: absolute;
       right: -56px;
-      top: 100%;
+      top: 120%;
       background: $white;
       padding: 10px;
       border-radius: 0 10px 10px;
@@ -162,12 +162,12 @@
         content: '';
         width: 0;
         height: 0;
-        border-left: 8px solid transparent;
-        border-right: 8px solid transparent;
-        border-bottom: 10px solid $hamburger-menu;
+        border-left: 14px solid transparent;
+        border-right: 14px solid transparent;
+        border-bottom: 15px solid $hamburger-menu;
         position: absolute;
-        right: 62px;
-        top: -10px;
+        right: 56px;
+        top: -15px;
       }
     }
   }
@@ -180,6 +180,37 @@
     @media only screen and (min-width: $tablet-max) {
       display: none;
     }
+  }
+}
+
+// Search form.
+.search-block-form  {
+  .form-type-search {
+    background: url('#{$image-base-path}/campbell_search_header.png') left top no-repeat;
+    display: inline-block;
+    width: 312px;
+    height: 45px;
+    position: relative;
+    margin: 0;
+    border-radius: 5px;
+
+    input {
+      position: absolute;
+      top: 30%;
+      left: 5px;
+      right: 0;
+      width: 143px;
+      height: 10px;
+      margin: auto;
+      border: 0;
+      padding: 1px;
+      font-size: 10px;
+      color: $black;
+    }
+  }
+
+  .form-actions {
+    display: none;
   }
 }
 
