--- a/docroot/themes/custom/cleco/src/scss/components/_nav--main.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_nav--main.scss
@@ -64,6 +64,7 @@ nav[class*='nav--main'] {
           opacity: 1;
           max-height: 9999em;
           visibility: visible;
+          overflow: hidden;
         }
       }
     }
