--- a/docroot/themes/custom/campbell/templates/views/views-view-fields--homepage-feature-content--video_block.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view-fields--homepage-feature-content--video_block.html.twig
@@ -4,4 +4,5 @@
 <div class="feature-desc">
 	<h3>{{ fields.title.content }}</h3>
 	{{ fields.field_listing_text_for_video.content }}
+	{{ fields.field_read_more.content }}
 </div>
