APEX-246: Fixed the arrow issue in dropdown

--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -234,15 +234,6 @@
       }
     }
   }
-
-  .dropdown-menu {
-    &>a,
-    &>.we-megamenu-nolink {
-      &:after {
-        display: none;
-      }
-    }
-  }
 }
 
 .we-mega-menu-ul {
@@ -278,7 +269,7 @@
 
       &::before,
       &::after {
-        display: none;
+        display: none !important;
       }
     }
 
