--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -14,6 +14,7 @@ $menu-hover: #384E53;
 $hamburger-menu: #2B2B30;
 $slider-txt-seperate: #34CB97;
 $light-black: #333333;
+$para: #585858;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
