--- a/docroot/themes/custom/campbell/templates/views/views-view-fields--featured-products-listing--feature_product_page.html.twig
+++ b/docroot/themes/custom/campbell/templates/views/views-view-fields--featured-products-listing--feature_product_page.html.twig
@@ -1,24 +1,24 @@
 {% set read_more_url = fields.field_read_more.content|render|trim|striptags %}
 
 {% if is_external_url(read_more_url) %}
-<div class="feature-desc">
- <a href="{{ read_more_url }}" target="_blank">
-	<h3>{{ fields.title.content }}</h3>
+ <a href="{{ read_more_url }}" target="_blank" class="feature-list">
+  <div class="image">
 	{{ fields.field_listing_page_image.content }}
-	{{ fields.field_footer_note.content }}
-  {{ fields.title.content }}
-  {{ read_more_url }}
+  </div>
+  <div class="overlay-text">
+    <h3>{{ fields.title.content }}</h3>
+    <div class="bottom-text">{{ fields.field_footer_note.content }}</div>
+  </div>
   </a>
-</div>
 {% else %}
-
-<div class="feature-desc">
- <a href="{{ read_more_url }}">
-	<h3>{{ fields.title.content }}</h3>
+ <a href="{{ read_more_url }}" class="feature-list">
+	<div class="image">
 	{{ fields.field_listing_page_image.content }}
-	{{ fields.field_footer_note.content }}
-  {{ fields.title.content }}
-  {{ read_more_url }}
+  </div>
+  <div class="overlay"></div>
+  <div class="overlay-text">
+    <h3>{{ fields.title.content }}</h3>
+    <div class="bottom-text">{{ fields.field_footer_note.content }}</div>
+  </div>
   </a>
-</div>
 {% endif %}
