--- a/source/themes/custom/campbell/styles/base/_layout.scss
+++ b/source/themes/custom/campbell/styles/base/_layout.scss
@@ -1,3 +1,9 @@
+body.user-logged-in {
+  @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
+    padding-top: 78px;
+  }
+}
+
 #wrapper {
   min-height: 100vh;
   display: grid;
@@ -8,6 +14,9 @@
   max-width: 1000px;
   margin: 0 auto;
   word-wrap: break-word;
+  @media only screen and (max-width: $tablet-max) {
+    padding: 0 20px;
+  }
 }
 
 .px-0 {
@@ -53,5 +62,19 @@
   @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
     flex: 0 0 44%;
     max-width: 44%;
+  }
+}
+
+.col-4-lg {
+  @media only screen and (min-width: $tablet-max) {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+}
+
+.col-3-md {
+  @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
+    flex: 0 0 33.333%;
+    max-width: 33.333%;
   }
 }
