--- a/source/themes/custom/campbell/styles/components/_banner.scss
+++ b/source/themes/custom/campbell/styles/components/_banner.scss
@@ -105,3 +105,26 @@
 .owl-nav.disabled {
   display: none;
 }
+
+// Banner.
+.page-banner {
+  background-image: url('#{$image-base-path}/banner-bg.jpeg');
+  background-size: cover;
+  display: block;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 200px;
+    @media only screen and (max-width: $tablet) {
+      height: 75px;
+    }
+    @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
+      height: 155px;
+    }
+  }
+
+  .wrapper-content {
+    padding: 0;
+  }
+}
