--- a/source/themes/custom/campbell/styles/components/_footer.scss
+++ b/source/themes/custom/campbell/styles/components/_footer.scss
@@ -15,7 +15,7 @@
     font-family: $helvetica;
     color: $white;
     @media only screen and (max-width: $tablet-max) {
-      padding: 25px 20px 10px;
+      padding: 25px 0 10px;
     }
   }
 
