--- a/source/themes/custom/campbell/styles/components/_products-page.scss
+++ b/source/themes/custom/campbell/styles/components/_products-page.scss
@@ -8,7 +8,7 @@
 .products-menu-page {
   margin: 30px 0 25px;
   @media only screen and (max-width: $tablet-max) {
-    margin: 30px 20px 25px;
+    margin: 30px 0 25px;
   }
 
   .menu-block {
