APEX-169: Pagination styling has been completed.

--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -15,6 +15,7 @@ $hamburger-menu: #2B2B30;
 $slider-txt-seperate: #34CB97;
 $light-black: #333333;
 $para: #585858;
+$alto: #D3D3D3;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
