--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -17,6 +17,9 @@ $light-black: #333333;
 $para: #585858;
 $alto: #D3D3D3;
 $filter-bg: #F9F9F9;
+$mustard: #FCD344;
+$dark-olive: #3D6611;
+$ivory: #FAFAEC;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
