--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -16,6 +16,7 @@ $slider-txt-seperate: #34CB97;
 $light-black: #333333;
 $para: #585858;
 $alto: #D3D3D3;
+$filter-bg: #F9F9F9;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
