APEX-335: Done theming for Breadcrumbs.

--- a/source/themes/custom/campbell/styles/components/_banner.scss
+++ b/source/themes/custom/campbell/styles/components/_banner.scss
@@ -1,3 +1,6 @@
+/****** Banner and Slider ******/
+
+// Homepage slider.
 .homepage-banner {
   background-image: url('#{$image-base-path}/banner-bg.jpeg');
   background-size: cover;
@@ -106,7 +109,7 @@
   display: none;
 }
 
-// Banner.
+// Basic page banner.
 .page-banner {
   background-image: url('#{$image-base-path}/banner-bg.jpeg');
   background-size: cover;
