--- a/source/themes/custom/campbell/styles/components/_footer.scss
+++ b/source/themes/custom/campbell/styles/components/_footer.scss
@@ -1,3 +1,5 @@
+/****** Footer ******/
+
 .footer-container {
   address {
     background: url('#{$image-base-path}/footer_back.png') repeat-x scroll left bottom $nero;
