--- a/source/themes/custom/campbell/styles/components/_pagination.scss
+++ b/source/themes/custom/campbell/styles/components/_pagination.scss
@@ -1,3 +1,5 @@
+/****** Pagination ******/
+
 .pager {
   margin: 1rem 0;
 
@@ -22,7 +24,7 @@
         align-items: center;
         justify-content: center;
         border: 0.0625rem solid $gray;
-        background: $alto url('/themes/custom/campbell/images/pagination_back.png') left top repeat-x;
+        background: $alto url('#{$image-base-path}/pagination_back.png') left top repeat-x;
 
         span {
           display: none;
