--- a/source/themes/custom/campbell/styles/components/_variables.scss
+++ b/source/themes/custom/campbell/styles/components/_variables.scss
@@ -20,6 +20,7 @@ $filter-bg: #F9F9F9;
 $mustard: #FCD344;
 $dark-olive: #3D6611;
 $ivory: #FAFAEC;
+$spanish-gray: #999999;
 
 /****** fonts ******/
 $arial: Arial, sans-serif;
