--- a/source/themes/custom/campbell/styles/components/_header.scss
+++ b/source/themes/custom/campbell/styles/components/_header.scss
@@ -1,3 +1,4 @@
+/****** Header ******/
 
 .d-none {
   display: none;
@@ -63,7 +64,7 @@
 
       a {
         display: block;
-        color: $white;
+        color: $white !important;
         padding: 11px 20px;
 
         &:hover {
