--- a/source/themes/custom/campbell/styles/components/_product-listing.scss
+++ b/source/themes/custom/campbell/styles/components/_product-listing.scss
@@ -1,4 +1,5 @@
-// product listing.
+/****** Products Listing page ******/
+
 .product-category-view-section {
   margin: 30px 0;
 }
@@ -143,9 +144,9 @@
   }
 
   .views-title {
+    text-align: center;
     @media only screen and (min-width: $tablet-max) {
       width: 15%;
-      text-align: center;
     }
     @media only screen and (min-width: $tablet) and (max-width: $tablet-max) {
       width: 25%;
