--- a/docroot/themes/custom/campbell/templates/node/node--product--teaser.html.twig
+++ b/docroot/themes/custom/campbell/templates/node/node--product--teaser.html.twig
@@ -15,7 +15,7 @@
  *   Calling other methods, such as node.delete(), will result in an exception.
  *   See \Drupal\node\Entity\Node for a full list of public properties and
  *   methods for the node object.
- * - label: The title of the node.
+ * - label: (optional) The title of the node.
  * - content: All node items. Use {{ content }} to print them all,
  *   or print a subset such as {{ content.field_example }}. Use
  *   {{ content|without('field_example') }} to temporarily suppress the printing
@@ -23,8 +23,8 @@
  * - author_picture: The node author user entity, rendered using the "compact"
  *   view mode.
  * - metadata: Metadata for this node.
- * - date: Themed creation date field.
- * - author_name: Themed author name field.
+ * - date: (optional) Themed creation date field.
+ * - author_name: (optional) Themed author name field.
  * - url: Direct URL of the current node.
  * - display_submitted: Whether submission information should be displayed.
  * - attributes: HTML attributes for the containing element.
@@ -65,32 +65,38 @@
  *
  * @see template_preprocess_node()
  *
- * @ingroup themeable
+ * @todo Remove the id attribute (or make it a class), because if that gets
+ *   rendered twice on a page this is invalid CSS for example: two lists
+ *   in different view modes.
  */
 #}
-{{ attach_library('campbell/node--full--product-category') }}
-{% set classes = [ 
-  'wrapper-content',
+{{ attach_library('campbell/node--teaser--product') }}
+{% set classes = [
+  'node',
+  'node--type-' ~ node.bundle|clean_class,
+  node.isPromoted() ? 'node--promoted',
+  node.isSticky() ? 'node--sticky',
+  not node.isPublished() ? 'node--unpublished',
+  view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 ] %}
 <article{{ attributes.addClass(classes) }}>
-  {{ title_prefix }}
-  {% if not page %}
-    <header{{ title_attributes }}>
-      <h3>
-        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-      </h3>
-    </header>
-  {% endif %}
-  {{ title_suffix }}
-  <div{{ content_attributes }}>
-    {{ content }}
-    <div class="row product-category-view-section">
-      <div class="col-filter">
-        {{ filters }}
-      </div>
-      <div class="col-list">
-      {{ view }}
-      </div>
+  <div{{ inner_attributes }}>
+    <div{{ content_attributes.addClass('node__content') }}>
+      <a href="{{ url }}" rel="bookmark">
+        <div{{ media_attributes }}>
+          {{ media }}
+        </div>
+        <div class="node__content-container">
+          <header class="node__header">
+            <div class="node__long-description">
+              {{ content }}
+            </div>
+          </header>
+          <div class="node__sku">
+            {{ label }}
+          </div>
+        </div>
+      </a>
     </div>
   </div>
 </article>
